--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -3,13 +3,13 @@
   /* font-size: 2em; */
 }
 
-.secondary_font {
+/* .secondary_font {
   font-family: "roboto_regular";
   font-style: normal;
   font-weight: normal;
   font-size: 1em;
   line-height: 28px;
-}
+} */
 
 .secondary_font_bold {
   font-family: "roboto_regular";
