--- a/src/pages/clientStories/clientStories.css
+++ b/src/pages/clientStories/clientStories.css
@@ -27,6 +27,11 @@
   margin-right: 5rem !important;
 }
 
+.client-school-card-medium {
+  border: solid #3386df 2px;
+  margin: 0 1rem 0 1em !important;
+}
+
 .client-sales-button {
   background-color: #1886df;
   color: white;
