--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -66,7 +66,24 @@
 
 .tiny-sub_footer_quote {
   color: white !important;
-  font-size: 20px;
+  font-size: 20px !important;
+}
+
+.tiny-sub-footer-quote-author-credit {
+  color: white !important;
+  font-size: 15px !important;
+  margin-bottom: 0px !important;
+}
+
+.extra-tiny-sub_footer_quote {
+  color: white !important;
+  font-size: 15px !important;
+}
+
+.extra-tiny-sub-footer-quote-author-credit {
+  color: white !important;
+  font-size: 12.5px !important;
+  margin-bottom: 0px !important;
 }
 
 .tiny-sub_footer_quote-margin {
@@ -216,4 +233,8 @@
 
 .mobile-features-page-content-text {
   margin: 0 15%;
+}
+
+.tiny-solutions-sub-footer-container {
+  min-width: 300px !important;
 }
