working on who we are break points

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -46,6 +46,10 @@
   padding-left: 200px;
 }
 
+.small-who-we-are-image-container {
+  justify-content: center;
+}
+
 .mobile-who-we-are-image-container {
   display: block;
 }
