--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -96,10 +96,23 @@
   font-size: 15px !important;
 }
 
+.extra-extra-tiny-sub_footer_quote {
+  color: white !important;
+  font-size: 12.5px !important;
+  margin-top: 7px;
+}
+
 .extra-tiny-sub-footer-quote-author-credit {
   color: white !important;
   font-size: 12.5px !important;
   margin-bottom: 0px !important;
+}
+
+.extra-extra-tiny-sub-footer-quote-author-credit {
+  color: white !important;
+  font-size: 10px !important;
+  margin: 0px !important;
+  padding: 0px !important;
 }
 
 .tiny-sub_footer_quote-margin {
