fixing medium sized form

--- a/src/pages/getADemo/GetADemo.css
+++ b/src/pages/getADemo/GetADemo.css
@@ -28,6 +28,16 @@
   min-height: 530px !important;
 }
 
+.small-get_in_touch_container {
+  border: solid #1886df 2px;
+  margin-bottom: 10%;
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  width: 900px !important;
+  min-height: 530px !important;
+}
+
 .mobile-get_in_touch_container {
   border: solid #1886df 2px;
   margin-bottom: 10%;
