--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -23,9 +23,18 @@
   margin-right: 100px;
 }
 
+.small-eventPageTitle {
+  margin-top: 100px;
+  align-content: center;
+}
+
 .aboutPageTitle {
   margin-bottom: 175px;
   margin-top: 100px;
+  align-content: center;
+}
+
+.small-aboutPageTitle {
   align-content: center;
 }
 
