--- a/src/pages/downloads/Downloads.css
+++ b/src/pages/downloads/Downloads.css
@@ -70,6 +70,11 @@
   height: auto;
 }
 
+.small-downloads-header-img {
+  width: 400px;
+  height: auto;
+}
+
 .mobile-downloads-header-img {
   width: 350px;
 }
