full screen form working

--- a/src/pages/getADemo/GetADemo.css
+++ b/src/pages/getADemo/GetADemo.css
@@ -225,6 +225,12 @@
   border: solid #ebf9ff 2px;
 }
 
+.full-screen-text-area {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 94px !important;
+}
+
 .mobile-textarea_style {
   border: solid #ebf9ff 2px;
   width: 300px;
