styling updated contact form

--- a/src/pages/getADemo/GetADemo.css
+++ b/src/pages/getADemo/GetADemo.css
@@ -225,6 +225,11 @@
   border: solid #ebf9ff 2px;
 }
 
+.small-textarea_style {
+  border: solid #ebf9ff 2px;
+  width: 300px;
+}
+
 .full-screen-text-area {
   display: flex;
   justify-content: flex-start;
