--- a/src/layout/Layout/Layout.css
+++ b/src/layout/Layout/Layout.css
@@ -91,3 +91,10 @@
   margin-right: 10px;
   border: none !important;
 }
+
+.logo {
+  max-width: 128px !important;
+  /* width: 128px !important;
+  min-width: 128px !important; */
+  height: auto;
+}
