- `productImgLeft` and `productImgLeft` to differentiate the two. hero image stays the same class - fixing padding - convert px to rem

--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,8 @@ body {
   font-family: "roboto_regular";
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 28px;
+  font-size: 1rem;
+  line-height: 1.5rem;
   color: #2b1f30;
 }
 
