--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -7,13 +7,13 @@
   font-family: "roboto_regular";
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 28px;
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .titleContainer {
-  margin-bottom: 100px;
-  margin-top: 85px;
+  margin-bottom: 5rem;
+  margin-top: 5rem;
   padding: 0 20%;
   text-align: center;
   display: flex;
@@ -22,7 +22,7 @@
 
 .featuresVideoEmbed {
   justify-content: center;
-  margin-bottom: 220px;
+  margin-bottom: 5rem;
 }
 
 .test-row {
