--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body {
   font-style: normal;
   font-weight: normal;
   font-size: 1rem;
-  line-height: 1.5rem;
+  line-height: 1.4rem;
   color: #2b1f30;
 }
 
@@ -98,7 +98,7 @@ code {
   justify-content: start;
 }
 
-/* Each marquee item is around 395 px wide in total, 
+/* Each marquee item is around 395 px wide in total,
 therefore, total marquee width is about 395 * # of marquee Items */
 .marquee {
   height: 500px;
@@ -125,7 +125,7 @@ therefore, total marquee width is about 395 * # of marquee Items */
   animation-play-state: paused;
 }
 
-/* Each marquee item is around 395 px wide in total, 
+/* Each marquee item is around 395 px wide in total,
 therefore, total marquee width is about 395 * # of marquee Items */
 .marqueeItem {
   background: linear-gradient(transparent 15%, #ebf9ff 15% 85%);
@@ -381,3 +381,10 @@ button:hover {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+
+.max-height-width-100 {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.height-80 { height: 80px; }
