--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -120,18 +120,17 @@
   flex-shrink: 2;
   margin-left: 10px;
   margin-right: 10px;
-  width: 147px;
-  min-width: 147px;
-  max-width: 147px;
-  height: auto;
+  width: 247px;
+  min-width: 247px;
+  height: 370px;
 }
 
 .oddNumberLeaderImage {
-  clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 95%);
+  clip-path: polygon(0 2%, 100% 0, 100% 100%, 0 98%);
 }
 
 .evenNumberLeaderImage {
-  clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
+  clip-path: polygon(0 0, 100% 2%, 100% 98%, 0 100%);
 }
 
 .leadership-team-container {
