--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -300,7 +300,7 @@
   margin-right: -200px;
   width: 150%;
   height: auto;
-  z-index: 3;
+  /* z-index: 3; */
   flex-shrink: 0;
   /* min-width: 500px; */
 }
@@ -316,7 +316,7 @@
   margin-left: -200px;
   width: 150%;
   height: auto;
-  z-index: 3;
+  /* z-index: 3; */
   flex-shrink: 0;
   /* min-width: 500px; */
 }
