Tweaked sub footer page margin

--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -146,7 +146,7 @@
 .subFooterPage {
   justify-content: center;
   height: 20em;
-  margin-bottom: 220px;
+  margin-bottom: 8rem;
   align-items: center;
   display: flex;
 }
