changed home video to rem, increased padding

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -216,7 +216,7 @@
   text-align: center;
   justify-content: center;
   margin-bottom: 50px;
-  padding: 50px 150px 0px 150px;
+  padding: 5rem 5rem 0px 5rem;
 }
 
 .mobile-homePageVideoCaseStudyTitle {
