adjusting padding on /about

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -304,7 +304,7 @@
 }
 
 .about-page-counselor-advisor-header {
-  margin-top: 100px;
+  margin-top: 3rem;
 }
 
 .about-page-counselor-advisor-footer {
