--- a/src/pages/solutions/solutions.css
+++ b/src/pages/solutions/solutions.css
@@ -6,6 +6,14 @@
   justify-content: center;
 }
 
+.mobile-solutions-title {
+  margin-top: 30px;
+  padding: 0 20%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
 .solutions-subtitle {
   justify-content: center;
 }
@@ -50,9 +58,9 @@
 
 .solutions-counselors-link-text:after {
   border-bottom: 3px solid #1886df;
-  transition: width .3s;
+  transition: width 0.3s;
   margin-bottom: -3px;
-  content: '';
+  content: "";
   display: block;
   width: 0;
   height: 2px;
@@ -71,9 +79,9 @@
 
 .solutions-it-link-text:after {
   border-bottom: 3px solid #ff6574;
-  transition: width .3s;
+  transition: width 0.3s;
   margin-bottom: -3px;
-  content: '';
+  content: "";
   display: block;
   width: 0;
   height: 2px;
@@ -92,9 +100,9 @@
 
 .solutions-principals-link-text:after {
   border-bottom: 3px solid #dfff4a;
-  transition: width .3s;
+  transition: width 0.3s;
   margin-bottom: -3px;
-  content: '';
+  content: "";
   display: block;
   width: 0;
   height: 2px;
@@ -113,9 +121,9 @@
 
 .solutions-superintendents-link-text:after {
   border-bottom: 3px solid #1886df;
-  transition: width .3s;
+  transition: width 0.3s;
   margin-bottom: -3px;
-  content: '';
+  content: "";
   display: block;
   width: 0;
   height: 2px;
