--- a/src/pages/solutions/solutions.css
+++ b/src/pages/solutions/solutions.css
@@ -54,6 +54,7 @@
   padding-bottom: 1px;
   color: #2b1f30 !important;
   font-weight: bold;
+  text-decoration: none !important;
 }
 
 .solutions-counselors-link-text:after {
@@ -64,6 +65,7 @@
   display: block;
   width: 0;
   height: 2px;
+  text-decoration: none !important;
 }
 
 .solutions-counselors-link-text:hover::after {
@@ -75,6 +77,7 @@
   padding-bottom: 1px;
   color: #2b1f30 !important;
   font-weight: bold;
+  text-decoration: none !important;
 }
 
 .solutions-it-link-text:after {
@@ -85,6 +88,7 @@
   display: block;
   width: 0;
   height: 2px;
+  text-decoration: none !important;
 }
 
 .solutions-it-link-text:hover::after {
@@ -96,6 +100,7 @@
   padding-bottom: 1px;
   color: #2b1f30 !important;
   font-weight: bold;
+  text-decoration: none !important;
 }
 
 .solutions-principals-link-text:after {
@@ -106,6 +111,7 @@
   display: block;
   width: 0;
   height: 2px;
+  text-decoration: none !important;
 }
 
 .solutions-principals-link-text:hover::after {
@@ -117,6 +123,7 @@
   padding-bottom: 1px;
   color: #2b1f30 !important;
   font-weight: bold;
+  text-decoration: none !important;
 }
 
 .solutions-superintendents-link-text:after {
@@ -127,6 +134,7 @@
   display: block;
   width: 0;
   height: 2px;
+  text-decoration: none !important;
 }
 
 .solutions-superintendents-link-text:hover::after {
