--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -331,3 +331,7 @@
   margin-left: 0px !important;
   margin-right: 0px !important;
 }
+
+.feature-bullet-text {
+  padding-left: 10px !important;
+}
