--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -504,3 +504,15 @@
   padding: 0.25rem 9999rem;
   background: #1786df;
 }
+
+.home-page-button {
+  font-family: "roboto_regular";
+  font-size: 16px !important;
+  margin-top: 8px !important;
+}
+
+.home-page-button-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
