--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -300,9 +300,8 @@
   left: 0;
   width: 150%;
   height: auto;
-  /* z-index: 3; */
   flex-shrink: 0;
-  /* min-width: 500px; */
+  margin-right: -200px;
 }
 
 .feature-image-sizing {
@@ -316,15 +315,18 @@
   right: 0;
   width: 150%;
   height: auto;
-  /* z-index: 3; */
+  margin-left: -200px;
   flex-shrink: 0;
-  /* min-width: 500px; */
 }
 
-/* .feature-image-sizing {
-  width: 594px;
+/* .productImgLeft {
+  position: relative;
+  margin-left: -200px;
+  width: 150%;
   height: auto;
-  margin-left: 0px;
+  z-index: 3;
+  flex-shrink: 0;
+  min-width: 500px;
 } */
 
 .no-x-axis-margin {
