--- a/src/layout/Layout/Layout.css
+++ b/src/layout/Layout/Layout.css
@@ -7,11 +7,6 @@
   background-color: white;
 }
 
-.nav-link {
-  font-family: "roboto_regular";
-  color: #2b1f30 !important;
-}
-
 .nav-link-button {
   font-family: "roboto_regular";
   font-size: 16px !important;
@@ -27,8 +22,49 @@
   background-color: #ebf9ff !important;
 }
 
+.navbar-nav .nav-link {
+  color: #2b1f30 !important;
+  font-family: "roboto_regular";
+  position: relative;
+}
+
+.nav-link::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #1886df;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.nav-link:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
 .nav-link:hover {
-  border-bottom: solid 2px #1886df !important;
+  display: inline-block;
+  border-bottom-color: #1886df;
+  margin-bottom: -3px !important;
+  padding-bottom: 0px !important;
+}
+
+.nav-link:after {
+  content: "";
+  width: 0;
+  height: 11px;
+}
+
+.nav-link:hover::after {
+  width: 100%;
+  display: block;
 }
 
 .footer-background {
@@ -45,6 +81,12 @@
 
 .translator:hover {
   cursor: pointer;
+}
+
+@media (max-width: 767px) {
+  .nav-link-button {
+    margin-top: 10px;
+  }
 }
 
 .demo-page-link {
@@ -98,7 +140,5 @@
 
 .logo {
   max-width: 128px !important;
-  /* width: 128px !important;
-  min-width: 128px !important; */
   height: auto;
 }
