--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -20,6 +20,14 @@
   justify-content: center;
 }
 
+.features-titleContainer {
+  margin-top: 5rem;
+  padding: 0 20%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
 .featuresVideoEmbed {
   justify-content: center;
   margin-bottom: 5rem;
