--- a/src/pages/events/Events.css
+++ b/src/pages/events/Events.css
@@ -91,3 +91,21 @@
 .mobile-events-top-border {
   border-top: solid #f5f5f5 1px;
 }
+
+.full-screen-events-clock {
+  padding-top: 4px;
+  width: 14px;
+  height: auto;
+}
+
+.mobile-events-clock {
+  padding-top: 4px;
+  width: 14px;
+  height: auto;
+}
+
+.events-clock-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
