--- a/src/layout/Layout/Layout.css
+++ b/src/layout/Layout/Layout.css
@@ -139,3 +139,49 @@
   max-width: 128px !important;
   height: auto;
 }
+
+.navbar-nav .footer-nav-link {
+  color: #2b1f30 !important;
+  font-family: "roboto_regular";
+  position: relative;
+}
+
+.footer-nav-link::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #1886df;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.footer-nav-link:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+.footer-nav-link:hover {
+  display: inline-block;
+  border-bottom-color: #1886df;
+  margin-bottom: -3px !important;
+  padding-bottom: 0px !important;
+  text-decoration: none !important;
+}
+
+.nav-link:after {
+  content: "";
+  width: 0;
+  height: 11px;
+}
+
+.nav-link:hover::after {
+  width: 100%;
+  display: block;
+}
