--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -516,6 +516,11 @@
   font-family: "roboto_regular";
   font-size: 16px !important;
   margin-top: 8px !important;
+  background-color: #1886df !important;
+}
+
+.home-page-button:hover {
+  background-color: #0069d9 !important;
 }
 
 .home-page-button-col {
