--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -237,6 +237,12 @@
   margin-left: 750px;
 }
 
+.medium-features-right-align-light-blue-background {
+  position: absolute;
+  z-index: 1;
+  margin-left: 1450px;
+}
+
 .events_small_sub_footer_blurb {
   color: white !important;
   font-size: 15px !important;
