--- a/src/pages/solutions/solutions.css
+++ b/src/pages/solutions/solutions.css
@@ -294,6 +294,16 @@
   min-width: 500px;
 }
 
+.medium-solutions-productImgLeft {
+  position: relative;
+  margin-left: -125px;
+  width: 100%;
+  height: auto;
+  z-index: 3;
+  flex-shrink: 0;
+  min-width: 500px;
+}
+
 .solutions-productImgRight {
   position: relative;
   margin-right: -125px;
@@ -304,7 +314,24 @@
   min-width: 500px;
 }
 
+.medium-solutions-productImgRight {
+  position: relative;
+  margin-right: -125px;
+  width: 100%;
+  height: auto;
+  z-index: 3;
+  flex-shrink: 0;
+  min-width: 500px;
+}
+
 .solutionsPageFeaturesImage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0 120px 0;
+}
+
+.medium-solutionsPageFeaturesImage {
   display: flex;
   justify-content: center;
   align-items: center;
