styling solutions and subpages

--- a/src/pages/solutions/solutions.css
+++ b/src/pages/solutions/solutions.css
@@ -316,7 +316,8 @@
 
 .medium-solutions-productImgRight {
   position: relative;
-  margin-right: -125px;
+  margin-right: -320px;
+  /* margin-right: -125px; */
   width: 100%;
   height: auto;
   z-index: 3;
