--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -148,6 +148,32 @@
   padding: 100px 0 100px 0;
 }
 
+.home-homePageFeaturesImage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0 100px 0;
+}
+
+@media screen and (max-width: 1250px) {
+  .home-homePageFeaturesImage {
+    display: flex;
+    align-items: center;
+    padding: 25px 0 25px 0;
+  }
+}
+@media screen and (max-width: 1250px) {
+  .home-left-blue-background {
+    background: linear-gradient(to right, #ebf9ff 50%, transparent 50%);
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .home-right-blue-background {
+    background: linear-gradient(to left, #ebf9ff 50%, transparent 50%);
+  }
+}
+
 .mobile-homePageFeaturesImage {
   display: flex;
   justify-content: center;
@@ -204,6 +230,21 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: -5rem;
+}
+
+.homeRows {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: -5rem;
+}
+
+@media screen and (max-width: 1250px) {
+  .homeRows {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: -5rem;
+    justify-content: center;
+  }
 }
 
 .mobile-featureRows {
@@ -331,6 +372,42 @@
   min-width: 500px;
 }
 
+.home-productImgRight {
+  position: relative;
+  margin-right: -200px;
+  width: 150% !important;
+  height: auto;
+  z-index: 3;
+  flex-shrink: 0;
+  min-width: 500px;
+}
+
+@media screen and (max-width: 1250px) {
+  .home-productImgRight {
+    position: relative;
+    width: 150%;
+    height: auto;
+    z-index: 3;
+    flex-shrink: 0;
+    max-width: 700px;
+    margin-left: 0px;
+    margin-right: 80px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .home-productImgRight {
+    margin-right: 0px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .home-productImgRight {
+    margin-right: 0px;
+    max-width: 600px;
+  }
+}
+
 .productImgLeft {
   position: relative;
   margin-left: -200px;
@@ -339,6 +416,42 @@
   z-index: 3;
   flex-shrink: 0;
   min-width: 500px;
+}
+
+.home-productImgLeft {
+  position: relative;
+  margin-left: -200px;
+  width: 150%;
+  height: auto;
+  z-index: 3;
+  flex-shrink: 0;
+  min-width: 500px;
+}
+
+@media screen and (max-width: 1250px) {
+  .home-productImgLeft {
+    position: relative;
+    width: 150%;
+    height: auto;
+    z-index: 3;
+    flex-shrink: 0;
+    max-width: 700px;
+    margin-left: 0px;
+    margin-right: 80px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .home-productImgLeft {
+    margin-right: 0px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .home-productImgLeft {
+    margin-right: 0px;
+    max-width: 600px;
+  }
 }
 
 .small-homePageImg {
@@ -370,10 +483,34 @@
   margin-left: -800px;
 }
 
-.right-align-light-blue-background {
+.home-custom-left-align-light-blue-background {
+  position: absolute;
+  z-index: 1;
+  margin-left: -800px;
+}
+
+@media screen and (max-width: 1250px) {
+  .home-custom-left-align-light-blue-background {
+    /* position: absolute;
+    z-index: 1;
+    margin-left: 0px; */
+    display: none;
+  }
+}
+
+.home-right-align-light-blue-background {
   position: absolute;
   z-index: 1;
   margin-left: 750px;
+}
+
+@media screen and (max-width: 1250px) {
+  .home-right-align-light-blue-background {
+    /* position: absolute;
+    z-index: 1;
+    margin-left: 0px; */
+    display: none;
+  }
 }
 
 .features-hero-image {
@@ -528,4 +665,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+}
+
+.home-feature-product-image-container {
+  border: solid red 2px;
 }
