--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -457,10 +457,11 @@
 
 .small-homePageImg {
   position: relative;
-  width: 100%;
+  width: 80%;
   height: auto;
   z-index: 3;
   flex-shrink: 0;
+
   /* min-width: 500px; */
 }
 
@@ -624,9 +625,6 @@
   width: 500px;
 }
 
-.mobile-edi-title-text {
-}
-
 .downloads-oval {
   margin-top: 200px;
   margin-left: -650px;
@@ -668,6 +666,19 @@
   justify-content: flex-end;
 }
 
-.home-feature-product-image-container {
-  border: solid red 2px;
+.home-medium-header-content {
+  max-width: 900px;
+}
+
+@media screen and (max-width: 920px) {
+  .home-medium-header-content {
+    max-width: 700px;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .home-medium-header-content {
+    max-width: 700px;
+    padding: 0 50px;
+  }
 }
