--- a/src/pages/features/Features.css
+++ b/src/pages/features/Features.css
@@ -344,8 +344,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex-direction: column-reverse;
 }
+
+/* .vertical-center-image {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-direction: column-reverse;
+} */
 
 .productImgRight {
   position: relative;
@@ -373,10 +379,9 @@
   margin-left: 0px;
 }
 
-.medium-left-feature-image-sizing {
+.medium-feature-subpage-image-sizing {
   max-width: 594px;
   height: auto;
-  margin-right: 250px;
 }
 
 .medium-right-feature-image-sizing {
@@ -388,29 +393,10 @@
   height: auto;
 }
 
-.medium-subpage-features-productImgRight {
-  position: absolute;
-  right: 0;
-  width: 150%;
-  height: auto;
-  flex-shrink: 0;
-}
-
-@media screen and (max-width: 870px) {
-  .medium-left-feature-image-sizing {
-    margin-right: 200px;
-  }
-  .medium-right-feature-image-sizing {
-    margin-right: 100px;
-  }
-}
-
-@media screen and (max-width: 810px) {
-  .medium-left-feature-image-sizing {
-    margin-right: 150px;
-  }
-  .medium-right-feature-image-sizing {
-    margin-right: 50px;
+@media screen and (max-width: 600px) {
+  .medium-feature-subpage-image-sizing {
+    max-width: 494px;
+    height: auto;
   }
 }
 
@@ -432,21 +418,17 @@
   flex-shrink: 0;
 }
 
-.medium-subpage-features-productImgLeft {
-  position: absolute;
+.medium-subpage-features-productImg {
+  display: flex;
+  justify-content: center;
   right: 0;
   width: 150%;
   height: auto;
-  /* margin-left: -200px; */
   flex-shrink: 0;
 }
 
-.medium-subpage-features-productImgRight {
-  position: absolute;
-  right: 0;
-  width: 150%;
-  height: auto;
-  flex-shrink: 0;
+.subpage-features-margin-right {
+  padding-right: 200px;
 }
 
 @media screen and (max-width: 1000px) {
