--- a/src/pages/getADemo/GetADemo.css
+++ b/src/pages/getADemo/GetADemo.css
@@ -89,7 +89,7 @@
   margin-top: 30px;
   width: 166px;
   height: 55px;
-  font-size: 20px;
+  font-size: 20px !important;
 }
 
 .submit_button:hover {
